--- a/index.html
+++ b/index.html
@@ -18,59 +18,60 @@
         </h1>
         <form class="block card mb-3">
             <div class="form-row">
-                <div class="form-group col-md-6" id="sellTaxNumber">
+                <div class="form-group col-md-6">
                     <label for="inputEmail4">賣方統一編號</label>
-                    <input type="text" class="form-control" id="inputEmail4" placeholder="Sell Tax Number">
+                    <input type="text" class="form-control sellTaxNumber" id="inputEmail4"
+                        placeholder="Sell Tax Number">
                 </div>
-                <div class="form-group col-md-6" id="sellName">
+                <div class="form-group col-md-6">
                     <label for="inputPassword4">賣方公司名稱</label>
-                    <input type="text" class="form-control" id="inputPassword4" placeholder="Sell Name">
+                    <input type="text" class="form-control sellName" id="inputPassword4" placeholder="Sell Name">
                 </div>
             </div>
-            <div class="form-group" id="sellAdd">
+            <div class="form-group">
                 <label for="inputAddress">賣方公司地址</label>
-                <input type="text" class="form-control" id="inputAddress" placeholder="Sell Add">
+                <input type="text" class="form-control sellAdd" id="inputAddress" placeholder="Sell Add">
             </div>
-            <div class="form-group" id="sellTel">
+            <div class="form-group">
                 <label for="inputAddress2">賣方聯絡電話</label>
-                <input type="text" class="form-control" id="inputAddress2" placeholder="Sell Tel">
+                <input type="text" class="form-control sellTel" id="inputAddress2" placeholder="Sell Tel">
             </div>
         </form>
 
         <form class="block card mb-3">
             <div class="form-row">
-                <div class="form-group col-md-6" id="buyTaxNumber">
+                <div class="form-group col-md-6">
                     <label for="inputEmail4">買方統一編號</label>
-                    <input type="text" class="form-control" id="inputEmail4" placeholder="Buy Tax Number">
+                    <input type="text" class="form-control buyTaxNumber" id="inputEmail4" placeholder="Buy Tax Number">
                 </div>
-                <div class="form-group col-md-6" id="buyName">
+                <div class="form-group col-md-6">
                     <label for="inputPassword4">買方公司名稱</label>
-                    <input type="text" class="form-control" id="inputPassword4" placeholder="Buy Name">
+                    <input type="text" class="form-control buyName" id="inputPassword4" placeholder="Buy Name">
                 </div>
             </div>
-            <div class="form-group" id="buyAdd">
+            <div class="form-group">
                 <label for="inputAddress">買方公司地址</label>
-                <input type="text" class="form-control" id="inputAddress" placeholder="Buy Add">
+                <input type="text" class="form-control buyAdd" id="inputAddress" placeholder="Buy Add">
             </div>
-            <div class="form-group" id="buyTel">
+            <div class="form-group">
                 <label for="inputAddress2">買方聯絡電話</label>
-                <input type="text" class="form-control" id="inputAddress2" placeholder="Tel">
+                <input type="text" class="form-control buyTel" id="inputAddress2" placeholder="Tel">
             </div>
         </form>
 
         <form class="block card mb-3">
-            <div class="form-group" id="invoiceNumber">
+            <div class="form-group">
                 <label for="inputAddress">發票號碼</label>
-                <input type="text" class="form-control" id="inputAddress" placeholder="Invoice Number">
+                <input type="text" class="form-control invoiceNumber" id="inputAddress" placeholder="Invoice Number">
             </div>
             <div class="form-row">
-                <div class="form-group col-md-6" id="invoiceDate">
+                <div class="form-group col-md-6" id="">
                     <label for="inputEmail4">發票開立日期</label>
-                    <input type="date" class="form-control" id="inputEmail4" placeholder="Invoice Date">
+                    <input type="date" class="form-control invoiceDate" id="inputEmail4" placeholder="Invoice Date">
                 </div>
-                <div class="form-group col-md-6" id="invoiceTime">
+                <div class="form-group col-md-6">
                     <label for="inputPassword4">發票開立時間</label>
-                    <input type="time" class="form-control" id="inputPassword4" placeholder="Invoice Time">
+                    <input type="time" class="form-control invoiceTime" id="inputPassword4" placeholder="Invoice Time">
                 </div>
             </div>
 
@@ -82,55 +83,49 @@
         <table class="table table-bordered">
             <thead>
                 <tr>
-                    <th scope="col">代碼</th>
                     <th scope="col">品名</th>
                     <th scope="col">數量</th>
                     <th scope="col">單價(未稅)</th>
-                    <th scope="col">金額</th>
+                    <th width="15%" scope="col">金額</th>
                     <th width="10%" scope="col">處理</th>
                 </tr>
             </thead>
-
             <tbody id="invoiceform">
                 <tr id="firstTr">
-                    <th scope="row">D</th>
                     <td><input type="text" class="form-control itemName" placeholder="品名" aria-label="Username"
                             aria-describedby="basic-addon1"></td>
                     <td><input type="text" class="form-control amount" placeholder="數量" aria-label="Username"
                             aria-describedby="basic-addon1"></td>
                     <td><input type="text" class="form-control unitPrice" placeholder="單價(未稅)" aria-label="Username"
                             aria-describedby="basic-addon1"></td>
-                    <td>
-                        <div id="subtotal"></div>
-                    </td>
+                    <td class="subtotal"></td>
                     <td></td>
                 </tr>
             </tbody>
             <tfoot>
                 <tr>
                     <th scope="row">課稅別：</th>
-                    <td colspan="5">應稅</td>
+                    <td colspan="4">應稅</td>
                 </tr>
                 <tr>
-                    <th scope="row">銷售額合計(未稅)：</th>
-                    <td colspan="5">
-                        <div id=taxExcluded></div>
-                    </td>
+                    <th scope="row">銷售額(未稅)：</th>
+                    <td colspan="4" id="taxExcluded"></td>
                 </tr>
                 <tr>
                     <th scope="row">課稅別：</th>
-                    <td colspan="5">5<span>%</span></td>
+                    <td colspan="1">5<span>%</span></td>
+                    <th scope="row">稅金：</th>
+                    <td colspan="2" id="taxPrice">
+                    </td>
                 </tr>
                 <tr>
                     <th scope="row">總計：</th>
-                    <td colspan="5">
-                        <div id=taxIncluded></div>
+                    <td colspan="4" id="taxIncluded">
                     </td>
                 </tr>
-
             </tfoot>
         </table>
-        <button type="button" class="btn btn-primary btn-lg btn-block">CSV 匯出</button>
+        <button type="button" class="btn btn-warning btn-lg btn-block output">CSV 匯出</button>
     </div>
 
 
